fix: item content alignment

--- a/packages/react-ui/styles/elements/_item.scss
+++ b/packages/react-ui/styles/elements/_item.scss
@@ -35,18 +35,18 @@
       margin-left: $item-content-spacer;
     }
   }
+}
 
-  // ----
-  //  Change Flex direction on Text Right item
-  // ----
-  .item.has-text-right,
-  .has-text-right > .item {
-    flex-direction: row-reverse;
+/******
+    Change Flex direction on Text Right item
+******/
+.item.has-text-right,
+.has-text-right > .item:not(.has-text-left) {
+  flex-direction: row-reverse;
 
-    > .avatar + .content {
-      margin-left: 0;
-      margin-right: $item-content-spacer;
-    }
+  > .avatar + .content {
+    margin-left: 0;
+    margin-right: $item-content-spacer;
   }
 }
 
